// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CToast renders correctly 1`] = `
<div
  appear=""
  aria-atomic="true"
  aria-live="assertive"
  class="toast show"
  position="static"
  role="alert"
  style=""
>
  <!---->
   
  <div
    class="toast-body"
  />
</div>
`;

exports[`CToast renders correctly custom wrapper 1`] = `
<div
  appear=""
  aria-atomic="true"
  aria-live="assertive"
  class="toast show"
  name="fade"
  position="bottom-center"
  role="alert"
  style=""
>
  <div
    class="toast-header"
  >
    <strong
      class="mr-auto"
    >
      title
    </strong>
     
    <button
      aria-label="Close"
      class="ml-2 mb-1 close"
      type="button"
    >
      ×
    </button>
  </div>
   
  <div
    class="toast-body"
  >
    CToast body
  </div>
</div>
`;
